tests/syntactic/output/output.err
Warning: Deprecated output qualifier was used in file output.dl at line 1
.decl A(x:number) output output
------------------^-------------
Error: output qualifier already set in file output.dl at line 1
.decl A(x:number) output output
-------------------------^------
Warning: Deprecated output qualifier was used in file output.dl at line 1
.decl A(x:number) output output
-------------------------^------
1 errors generated, evaluation aborted
